--- a/Core/index2.html
+++ b/Core/index2.html
@@ -400,7 +400,17 @@ user agent stylesheetdiv {
             </div>
 
         </div>
+        
     </div>
+    <div class="container-fluid">
+            <div class="container">
+                <ul style="list-style:none;margin:0;padding:0;">
+                    <li style="margin:0;padding:5px;font-weight:bold;">
+                        Bolag
+                    </li>
+                </ul>
+            </div>
+        </div>
     <div class="container" style="margin-top:30px;">
         <div class="starter-template">
             <div class="row">
