--- a/Core/Index.html
+++ b/Core/Index.html
@@ -11,36 +11,37 @@
 
     <!-- Bootstrap core CSS -->
 
-    <script src="/vendor/js/jquery-1.11.2.min.js"></script>
-    <link href="/vendor/css/bootstrap.min.css" rel="stylesheet">
-    <script src="/vendor/js/bootstrap.min.js"></script>
+    <script src="/Static/vendor/js/jquery-1.11.2.min.js"></script>
+    <link href="/Static/vendor/css/bootstrap.min.css" rel="stylesheet">
+    <script src="/Static/vendor/js/bootstrap.min.js"></script>
     
     
 
-    <script src="/vendor/js/jquery-1.11.2.min.js"></script>
-    <script src="/vendor/js/angular.js"></script>
-    <script src="/vendor/js/angular-route.min.js"></script>
-    <script src="Scripts/ui-bootstrap-tpls-0.13.0.min.js"></script>
+    <script src="/Static/vendor/js/jquery-1.11.2.min.js"></script>
+    <script src="/Static/vendor/js/angular.js"></script>
+    <script src="/Static/vendor/js/angular-route.min.js"></script>
+    <script src="/Static/Scripts/ui-bootstrap-tpls-0.13.0.min.js"></script>
+
     <script src="/App/App.js"></script>
     <script src="/App/Services/HttpService.js"></script>
     <script src="/App/Directives/Directives.js"></script>
     <script src="/App/Directives/Card.js"></script>
     <script src="/App/Directives/Edit.js"></script>
     <script src="/App/Directives/Grid.js"></script>
-    <link rel="stylesheet" href="/vendor/font-awesome/css/font-awesome.min.css">
-    <link rel="stylesheet" href="Styles/site.css">
+    <link rel="stylesheet" href="/Static/vendor/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/site.css">
     <!--<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>-->
     <link href='http://fonts.googleapis.com/css?family=Noto+Sans' rel='stylesheet' type='text/css'>
-    <link rel='stylesheet' href='typicons/typicons.min.css' />
-    <link rel='stylesheet' href='font.css' />
+    <link rel='stylesheet' href='/Static/typicons/typicons.min.css' />
+    <link rel='stylesheet' href='/Static/font.css' />
     <style>
         @font-face {
-          font-family: 'typicons';
-          src: url("typicons/typicons.eot");
-          src: url("typicons/typicons.eot?#iefix") format('embedded-opentype'),
-               url("typicons/typicons.woff") format('woff'),
-               url("typicons/typicons.ttf") format('truetype'),
-               url("typicons/typicons.svg#typicons") format('svg');
+          font-family: 'static/typicons';
+          src: url("static/typicons/typicons.eot");
+          src: url("static/typicons/typicons.eot?#iefix") format('embedded-opentype'),
+               url("static/typicons/typicons.woff") format('woff'),
+               url("static/typicons/typicons.ttf") format('truetype'),
+               url("static/typicons/typicons.svg#typicons") format('svg');
           font-weight: normal;
           font-style: normal;
         }
